--- a/project_2/seidel.html
+++ b/project_2/seidel.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jordan Optimised Method</title>
+    <title>Seidel Method</title>
 </head>
 <body>
 
@@ -15,6 +15,6 @@
 </textarea>
 <input type="button" id="sendBtn" value="Calculate">
 
-<script src="JordanOptimised.js"></script>
+<script src="Seidel.js"></script>
 </body>
 </html>
